<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">幼教家长</string>
    <string name="action_settings">Settings</string>
    <string name="saving_image">保存照片</string>
    <string name="preparing_card">准备卡</string>
    <string name="no_storage_card">没有储存卡</string>
    <string name="not_enough_space">没有足够的空间</string>
    <string name="listfooterview_normal">查看更多</string>
    <string name="listfooterview_ready">松开载入更多</string>
    <string name="homework">作业</string>
    <string name="notify">通知</string>
    <string name="change_password">更换密码</string>
    <string name="oldpassword">请输入旧密码</string>
    <string name="newpassword">请输入新密码</string>
    <string name="new2password">请再输入新密码</string>
    <string name="more">更多</string>
    <string name="growth_data">成长足迹</string>
    <string name="czda">我的相册</string>
    <string name="quanwen">全文</string>
    <string name="zhedie">折叠</string>
    <string name="praent_jobs">家长作业</string>
    <string name="qsrgjz">请输入关键字</string>
    <string name="myppdlxr">没有匹配的联系人</string>
    <string name="common">评论</string>
    <string name="exit">再按一下退出</string>
    <string name="zan">赞</string>
    <string name="my_baby">我的宝贝</string>
    <string name="no_network">网络繁忙,请稍后再试</string>
    <string name="collect_photos">收藏照片\n</string>
    <string name="red_flower">红花\n</string>
    <string name="grees_ye">绿叶\n</string>
    <string name="qing_shu_cheng_yuan">亲属成员</string>
    <string name="muqian">目前只支持3位亲属</string>
    <string name="didnt_scan_to_join">还未加入 扫描班级二维码即可加入</string>
    <string name="school_news">学校新闻</string>
    <string name="school_detial">学校详情</string>
    <string name="message">私信</string>
    <string name="remove_teacher">老师 删除需要联系客服</string>
    <string name="baby">宝贝</string>
    <string name="all_people">所有联系人</string>
    <string name="send_message_btn">发送</string>
    <string name="send_message">发私信</string>
    <string name="cancle">取消</string>
    <string name="peolpe">收件人</string>
    <string name="me">我</string>
    <string name="my_photos">我的相册</string>
    <string name="setting">设置</string>
    <string name="send">发布</string>
    <string name="save_something">说点什么吧</string>
    <string name="pelease_add_content_or_img">请添加内容或图片</string>
    <string name="finish">完成</string>
    <string name="choose_camera">选择相片</string>
    <string name="camera_init">相册初始化中</string>
    <string name="no_user_camcre">相机不能用，请检查设备</string>
    <string name="max_photos">最多选择9张照片</string>
    <string name="get_fail_photos">获取图片失败</string>
    <string name="send_green">发放小绿叶</string>
    <string name="take_photos">拍照</string>
    <string name="choose_photos">从手机相册选择</string>
    <string name="take_photos_to_homework">拍照交作业</string>
    <string name="homework_detail">作业详情</string>
    <string name="scan">二维码扫描</string>
    <string name="choose_scan_for_photo">从相册获取</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="pull_to_refresh_release_label">松开加载</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_pull_label">按住滑动</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="jiaxiao">家校</string>
    <string name="xuexi">智慧课堂</string>
    <string name="wode">我的</string>
    <string name="wifi_on">仅在WIFI网络下上传照片</string>
    <string name="clear_data">清除缓存</string>
    <string name="check">检查更新</string>
    <string name="serice">服务协议</string>
    <string name="about">关于</string>
    <string name="biaoqing">标清</string>
    <string name="gaoqing">高清</string>
    <string name="set_number">设置安全号码</string>
    <string name="change_number">更换手机号码</string>
    <string name="exit_bt">退出</string>
    <string name="version">当前版本</string>
    <string name="can_not_find_version_name">没有获取到版本号</string>
    <string name="sure_clear_data">确认清理缓存吗?</string>
    <string name="right_tellphone">请输入正确的手机号码</string>
    <string name="kiway">开维教育</string>
    <string name="new_version">有新的版本，是否更新?</string>
    <string name="new_versionont">有新的版本更新</string>
    <string name="zhuce">注册</string>
    <string name="sure_exit">确定退出么?</string>
    <string name="sure">确定</string>
    <string name="login">登录</string>
    <string name="regeri">注册</string>
    <string name="username">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="forget_password_t">忘记密码</string>
    <string name="core">验证码不能为空</string>
    <string name="user_core">请输入验证码</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="kecheng">课程</string>
    <string name="zulichengchang">助力成长</string>
    <string name="tuijian">推荐</string>
    <string name="saomiao_jiaban">加入我孩子班级\n关注宝贝成长</string>
    <string name="saoyisao">扫码加班</string>
    <string name="srlssjh">输入老师手机号加班</string>
    <string name="my_baby_scan">我孩子的班级二维码在哪里：</string>
    <string name="teacher_emial">1.老师发的致家长一封信</string>
    <string name="teacher_phone_scan">2.老师手机上我孩子的班级二维码</string>
    <string name="choose_my_baby">选择我的宝贝</string>
    <string name="profile_baby">完善宝贝信息</string>
    <string name="baby_sex">宝贝性别</string>
    <string name="baby_briathday">宝贝生日</string>
    <string name="I_is_baby">我是宝贝的</string>
    <string name="must">请选择(必填)</string>
    <string name="finish_follow">完成关注 去首页看看</string>
    <string name="please_fisinh_baby_info">请完善宝贝信息</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="dad">爸爸</string>
    <string name="mun">妈妈</string>
    <string name="qin">亲戚</string>
    <string name="proflie_head">没有设置头像</string>
    <string name="proflie_sex">没有设置性别</string>
    <string name="proflie_brithday">没有设置生日</string>
    <string name="proflie_bax">没有设置关系</string>
    <string name="banjierweima">班级二维码</string>
    <string name="use_yjpt">使用幼教平台扫描上方的二维码加入班级</string>
    <string name="class_ring">班级圈</string>
    <string name="inschool_info">在校情况</string>
    <string name="create_tao">创建讨论组</string>
    <string name="qxgz">取消关注成功</string>
    <string name="dialog_title_no_point">提示</string>
    <string name="play_error_tips">播放失败</string>
    <string name="dialog_yes_button">确定</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="tell_somethin">输入您的名字</string>
    <string name="wtcphone">请输入老师手机号</string>
    <string name="head_portrait">头像</string>
    <string name="name_must">姓名(必填)</string>
    <string name="area">地区</string>
    <string name="xgcg">修改成功</string>
    <string name="xgbbxx">修改宝贝信息</string>
    <string name="qxgzbb">取消关注宝贝</string>
    <string name="qdbdgxm">确定绑定关系么</string>
    <string name="nyjbdgbjlsfcxbd">你已经绑定过班级了,如需重新绑定,请先取消关注</string>
    <string name="ws">卫生</string>
    <string name="ly">礼仪</string>
    <string name="yc">用餐</string>
    <string name="jl">纪律</string>
    <string name="fy">发言</string>
    <string name="kq">考勤</string>
    <string name="tlsm">图例说明</string>
    <string name="yx">优秀</string>
    <string name="bxbc">表现不错</string>
    <string name="rxnl">仍需努力</string>
    <string name="nhmybdbb">你还没有绑定宝贝,赶快去绑定吧</string>
    <string name="reply">回复</string>
    <string name="bnhfzi">不能回复自己</string>
    <string name="nyjzlgbjq">你已经赞了该班级圈</string>
    <string name="calss_rings">班级圈</string>
    <string name="dqsjmylrhlwqljhlwl">当前手机连接没有互联网，请连接互联网络</string>
    <string name="jll">记录了</string>
    <string name="tdsg">天的时光</string>
    <string name="snkj">谁能看见</string>
    <string name="gk">公开</string>
    <string name="bgk">不公开</string>
    <string name="yizan">已赞</string>
    <string name="dqwlhjbs">当前网络环境不是wifi,不能上传照片,如需更改请到设置中更改</string>
    <string name="mysj">没有相关内容</string>
    <string name="zero">0/140</string>
    <string name="ljhlw">连接互联网</string>
    <string name="save_photos">保存照片</string>
    <string name="bczp">保存成功</string>
    <string name="bcsb">保存失败</string>
    <string name="xiangji">相机</string>
    <string name="tuku">图库</string>
    <string name="wdqmb">我的群名片</string>
    <string name="qcy">群成员</string>
    <string name="xxmdr">消息免打扰</string>
    <string name="qkltjl">清空聊天记录</string>
    <string name="chengyuan">成员</string>
    <string name="tjcy">添加成员</string>
    <string name="jionsclass">加入班级</string>

</resources>