<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_f7f7f7"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitStart"
        android:src="@drawable/yjptj" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_5dp"
        android:text="@string/saomiao_jiaban"
        android:textColor="@color/_f41100"
        android:textSize="@dimen/_16sp" />

    <LinearLayout
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:background="@drawable/chengsebutton_selector_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/scan"
            android:drawablePadding="@dimen/_7dp"
            android:gravity="center"
            android:text="@string/saoyisao"
            android:textColor="@color/_ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:background="@drawable/chengsebutton_selector_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_communication_stay_current_portrait_phone"
            android:drawablePadding="@dimen/_7dp"
            android:gravity="center"
            android:text="@string/srlssjh"
            android:textColor="@color/_ffffff" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_baby_scan"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_7dp"
        android:text="@string/teacher_emial"
        android:textColor="@color/_666666"
        android:textSize="@dimen/_12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:gravity="center"
        android:text="@string/teacher_phone_scan"
        android:textColor="@color/_666666"
        android:textSize="@dimen/_12sp" />

</LinearLayout>