<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_f7f7f7"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp" >

        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/message" />

        <uk.co.senab.photoview.widget.FilterImageView
            android:id="@+id/previos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/_10dp"
            android:paddingRight="@dimen/_20dp"
            android:src="@drawable/previous" />

        <uk.co.senab.photoview.widget.FilterImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10dp"
            android:src="@drawable/ic_content_add"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_7dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/_5dp"
            android:text="@string/tlsm"
            android:textColor="@color/_666666"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/yx"
            android:drawablePadding="@dimen/_3dp"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/_5dp"
            android:text="@string/yx"
            android:textColor="@color/_666666"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bc"
            android:drawablePadding="@dimen/_3dp"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/_5dp"
            android:text="@string/bxbc"
            android:textColor="@color/_666666"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/xnl"
            android:drawablePadding="@dimen/_3dp"
            android:gravity="center_vertical"
            android:text="@string/rxnl"
            android:textColor="@color/_666666"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

    <handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/boy_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:fastScrollEnabled="false"
        android:scrollbars="none" >
    </handmark.pulltorefresh.library.PullToRefreshListView>

    <TextView
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/no_data"
        android:gravity="center"
        android:text="没有相关内容"
        android:textColor="@color/_00cc99"
        android:textSize="@dimen/_14sp"
        android:visibility="gone" />

</LinearLayout>