<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_cfcfcf"
    android:orientation="vertical" >

    <Button
        android:id="@+id/dad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_ffffff"
        android:padding="@dimen/_10dp"
        android:text="@string/dad"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:background="@color/_e5e5e5" />

    <Button
        android:id="@+id/mun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_ffffff"
        android:padding="@dimen/_10dp"
        android:text="@string/mun"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:background="@color/_e5e5e5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@color/_e5e5e5" />

    <Button
        android:id="@+id/qin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_ffffff"
        android:padding="@dimen/_10dp"
        android:text="@string/qin"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_16sp" />

</LinearLayout>