<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_f7f7f7"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp" >

        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/about" />

        <uk.co.senab.photoview.widget.FilterImageView
            android:id="@+id/previos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/_10dp"
            android:paddingRight="@dimen/_20dp"
            android:src="@drawable/previous" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30dp"
        android:drawablePadding="@dimen/_10dp"
        android:drawableTop="@mipmap/ic_launcher"
        android:text="@string/app_name"
        android:textColor="@color/_333333"
        android:textSize="@dimen/_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_20dp"
        android:text="@string/kiway"
        android:textColor="@color/_666666"
        android:textSize="@dimen/_12sp" />

</LinearLayout>